OOPS in Js - Class and Object creation

--- a/JS-placement-prep.html
+++ b/JS-placement-prep.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-revision</title>
 
-    <script src="./JS-placement-prep.js" defer></script>
+    <!-- <script src="./JS-placement-prep.js" defer></script> -->
+    <script src="./OOPsinJS.js" defer></script>
 </head>
 
 <body>
